feat(index): 新增顶栏样式布局

--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,28 @@
       name="viewport"
       content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
     />
-    <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="assets/styles/reset.scss" />
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="stylesheet" href="./assets/styles/reset.scss" />
+    <link rel="stylesheet" href="./assets/styles/index.scss" />
     <title>中国社会科学文库</title>
   </head>
   <body>
-    hi
-    <script src="main.js"></script>
+    <header class="header">
+      <a href="/" class="header__anchor">
+        <h1 class="h1">中国社会科学文库</h1>
+        <img
+          src="assets/images/logo-name.svg"
+          alt="中国社会科学文库"
+          class="anchor__logo-name"
+        />
+      </a>
+
+      <p class="header__user">
+        <span class="user__sign-in">注册</span>
+        <span class="user__login">登录</span>
+      </p>
+    </header>
+    <main class="main">main</main>
+    <script src="./main.js"></script>
   </body>
 </html>
