--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,47 @@
         <span class="user__login">登录</span>
       </p>
     </header>
-    <main class="main">main</main>
+
+    <main class="main">
+      <aside class="main__aside">
+        <div class="aside__form">
+          <div class="form__new-chat-button"
+            >&nbsp;&nbsp;&nbsp;&nbsp;新建对话</div
+          >
+          <div class="form__query-history">
+            <input
+              type="search"
+              name="history"
+              placeholder="搜索历史记录"
+              class="query-history__input"
+            />
+          </div>
+        </div>
+
+        <ul class="aside__list">
+          <li class="list-item">
+            <p>请问财经类大学生喜欢听哪些方面的歌曲？</p>
+          </li>
+          <li class="list-item">
+            <p>清代国家统一史</p>
+          </li>
+          <li class="list-item">
+            <p>中国经济报告2022：实现共同富裕</p>
+          </li>
+          <li class="list-item">
+            <p>中国经济报告2022：实现共同富裕</p>
+          </li>
+          <li class="list-item">
+            <p>中国经济报告2022：实现共同富裕</p>
+          </li>
+          <li class="list-item">
+            <p>中国经济报告2022：实现共同富裕</p>
+          </li>
+        </ul>
+      </aside>
+
+      <main class="main__main">main</main>
+    </main>
     <script src="./main.js"></script>
   </body>
 </html>
