feat(index): 新增主要内容提问输入区域样式布局

--- a/src/index.html
+++ b/src/index.html
@@ -75,10 +75,65 @@
           <li class="list-item">
             <p>中国经济报告2022：实现共同富裕</p>
           </li>
+
+          <li class="list-item">
+            <p>请问财经类大学生喜欢听哪些方面的歌曲？</p>
+          </li>
+          <li class="list-item">
+            <p>清代国家统一史</p>
+          </li>
+          <li class="list-item">
+            <p>中国经济报告2022：实现共同富裕</p>
+          </li>
+          <li class="list-item">
+            <p>中国经济报告2022：实现共同富裕</p>
+          </li>
+          <li class="list-item">
+            <p>中国经济报告2022：实现共同富裕</p>
+          </li>
+          <li class="list-item">
+            <p>中国经济报告2022：实现共同富裕</p>
+          </li>
+          <li class="list-item">
+            <p>请问财经类大学生喜欢听哪些方面的歌曲？</p>
+          </li>
+          <li class="list-item">
+            <p>清代国家统一史</p>
+          </li>
+          <li class="list-item">
+            <p>中国经济报告2022：实现共同富裕</p>
+          </li>
+          <li class="list-item">
+            <p>中国经济报告2022：实现共同富裕</p>
+          </li>
+          <li class="list-item">
+            <p>中国经济报告2022：实现共同富裕</p>
+          </li>
+          <li class="list-item">
+            <p>中国经济报告2022：实现共同富裕</p>
+          </li>
         </ul>
       </aside>
 
-      <main class="main__main">main</main>
+      <main class="main__main">
+        <article class="main__article">
+          <section></section>
+        </article>
+
+        <div class="main__form">
+          <div class="form__question">
+            <textarea
+              type="textarea"
+              name="question"
+              placeholder="请输入问题"
+              rows="5"
+              class="question__textarea"
+            ></textarea>
+
+            <div class="question__submit-button"></div>
+          </div>
+        </div>
+      </main>
     </main>
     <script src="./main.js"></script>
   </body>
