--- a/src/index.html
+++ b/src/index.html
@@ -56,94 +56,11 @@
           </div>
         </div>
 
-        <ul class="aside__list">
-          <li class="list-item">
-            <p>请问财经类大学生喜欢听哪些方面的歌曲？</p>
-          </li>
-          <li class="list-item">
-            <p>清代国家统一史</p>
-          </li>
-          <li class="list-item">
-            <p>中国经济报告2022：实现共同富裕</p>
-          </li>
-          <li class="list-item">
-            <p>中国经济报告2022：实现共同富裕</p>
-          </li>
-          <li class="list-item">
-            <p>中国经济报告2022：实现共同富裕</p>
-          </li>
-          <li class="list-item">
-            <p>中国经济报告2022：实现共同富裕</p>
-          </li>
-
-          <li class="list-item">
-            <p>请问财经类大学生喜欢听哪些方面的歌曲？</p>
-          </li>
-          <li class="list-item">
-            <p>清代国家统一史</p>
-          </li>
-          <li class="list-item">
-            <p>中国经济报告2022：实现共同富裕</p>
-          </li>
-          <li class="list-item">
-            <p>中国经济报告2022：实现共同富裕</p>
-          </li>
-          <li class="list-item">
-            <p>中国经济报告2022：实现共同富裕</p>
-          </li>
-          <li class="list-item">
-            <p>中国经济报告2022：实现共同富裕</p>
-          </li>
-          <li class="list-item">
-            <p>请问财经类大学生喜欢听哪些方面的歌曲？</p>
-          </li>
-          <li class="list-item">
-            <p>清代国家统一史</p>
-          </li>
-          <li class="list-item">
-            <p>中国经济报告2022：实现共同富裕</p>
-          </li>
-          <li class="list-item">
-            <p>中国经济报告2022：实现共同富裕</p>
-          </li>
-          <li class="list-item">
-            <p>中国经济报告2022：实现共同富裕</p>
-          </li>
-          <li class="list-item">
-            <p>中国经济报告2022：实现共同富裕</p>
-          </li>
-        </ul>
+        <ul class="aside__list"></ul>
       </aside>
 
       <main class="main__main">
-        <article class="main__article">
-          <section class="article__section user">
-            <div class="section__profile"></div>
-            <div class="section__content">如何理解促进共同富裕的重大意义？</div>
-          </section>
-          <section class="article__section">
-            <div class="section__profile"></div>
-            <div class="section__content">
-              <div class="content__text more"
-                >习近平总书记指出，共同富裕是社会主义的本质要求，是中国式现代化的重要特征。我们要充分认识促进共同富裕的重大意义，推动共同富裕持续取得新进展，为全面建设社会主义现代化国家奠定坚实基础。让人民过上好日子，实现共同富裕，是中国共产党矢志不渝的奋斗目标。新中国成立以来特别是改革开放以来，我们党团结带领人民朝着实现共同富裕的目标不懈努力。改革开放后，我们党深刻总结正反两方面历史经验，认识到贫穷不是社会主义，允许一部分人、一部分地区先富起来，并确立小康目标继续推进，人民生活质量和社会共享水平显著提升。党的十八大以来，以习近平同志为核心的党中央把逐步实现全体人民共同富裕摆在更加重要的位置，对共同富裕道路做了新的探索。对共同富裕理论做了新的阐释，对共同富裕目标做了新的部署，坚持以人民为中心的发展思想，采取有利措施保障和改善民生。打赢脱贫攻坚战，，全面建成小康社会，为促进共同富裕创造了良好条件。现在，已经到了扎实推动共同富裕的历史阶段。”在百年奋斗历程中，我们党团结带领人民创造了新民主主义革命的伟大成就、社会主义革命和建设的伟大成就、改革开放和社会主义现代化建设的伟大成就、新时代中国特色社会主义的伟大成就，书写了中华民族几千年历史上最恢宏的史诗，为实现共同富裕奠定了坚实基础。党的十八大以来，以习近平同志为核心的党中央带领全党全国各族人民持续奋斗，实现了第一个百年奋斗目标，在中华大地上全面建成了小康社会，历史性地解决了绝对贫困问题。我们党着眼于保障和改善民生，在收入分配、就业、教育、社会保障、医疗卫生、住房保障等方面推出一系列重大举措，注重加强普惠性、基础性、兜底性民生建设，推进基本公共服务均等化。今天，我们已经有条件、有能力扎实推动共同富裕，让全体人民共享发展成果。</div
-              >
-              <span class="content__more-button">展开更多</span>
-            </div>
-          </section>
-
-          <section class="article__section user">
-            <div class="section__profile"></div>
-            <div class="section__content">如何理解促进共同富裕的重大意义？</div>
-          </section>
-          <section class="article__section">
-            <div class="section__profile"></div>
-            <div class="section__content">
-              <div class="content__text"
-                >习近平总书记指出，共同富裕是社会主义的本质要求，是中国式现代化的重要特征。我们要充分认识促进共同富裕的重大意义，推动共同富裕持续取得新进展，为全面建设社会主义现代化国家奠定坚实基础。</div
-              >
-            </div>
-          </section>
-        </article>
+        <article class="main__article"></article>
 
         <div class="main__form">
           <div class="form__question">
