feat(main): 新增媒体查询移动端尺寸适配

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <link rel="icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./assets/styles/reset.scss" />
     <link rel="stylesheet" href="./assets/styles/index.scss" />
+    <link rel="stylesheet" href="./assets/styles/media.scss" />
     <title>中国社会科学文库</title>
   </head>
   <body>
@@ -35,7 +36,9 @@
       </a>
 
       <p class="header__user">
+        <span class="user__menu">菜单</span>
         <span class="user__sign-in">注册</span>
+        <span>|</span>
         <span class="user__login">登录</span>
       </p>
     </header>
