--- a/src/index.html
+++ b/src/index.html
@@ -3,34 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta
-      name="title"
-      content="中国社会科学文库 | 哲学 | 社会科学 | 电子书数据库"
-    />
-    <meta
-      name="keywords"
-      content="人文社会科学数据库，学术平台，哲学，历史学，宗教学"
-    />
-    <meta
-      name="description"
-      content="中国社会科学文库是中国最好的社会科学学术数据库，社会科学学术知识服务平台。涵盖了哲学，历史学，宗教学，经济学，马克思主义学说，文学艺术，等社会学科的综合知识平台"
-    />
-    <meta
       name="viewport"
       content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
     />
-    <link rel="icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./assets/styles/reset.scss" />
     <link rel="stylesheet" href="./assets/styles/index.scss" />
     <link rel="stylesheet" href="./assets/styles/media.scss" />
-    <title>中国社会科学文库</title>
+    <title>聊天机器人</title>
   </head>
   <body>
     <header class="header">
       <a href="/" class="header__anchor">
-        <h1 class="h1">中国社会科学文库</h1>
+        <h1 class="h1">聊天机器人</h1>
         <img
           src="assets/images/logo-name.svg"
-          alt="中国社会科学文库"
+          alt="聊天机器人"
           class="anchor__logo-name"
         />
       </a>
@@ -45,19 +32,7 @@
 
     <main class="main">
       <aside class="main__aside">
-        <div class="aside__form">
-          <div class="form__new-chat-button"
-            >&nbsp;&nbsp;&nbsp;&nbsp;新建对话</div
-          >
-          <div class="form__query-history">
-            <input
-              type="search"
-              name="history"
-              placeholder="搜索历史记录"
-              class="query-history__input"
-            />
-          </div>
-        </div>
+        <div class="aside__new-chat-button">新建对话</div>
 
         <ul class="aside__list"></ul>
       </aside>
