feat(main): 修改主要内容提问文本区域样式及交互逻辑

--- a/src/index.html
+++ b/src/index.html
@@ -45,12 +45,10 @@
             <textarea
               type="textarea"
               name="question"
-              placeholder="请输入问题"
-              rows="5"
+              placeholder="请输入问题···"
+              rows="3"
               class="question__textarea"
             ></textarea>
-
-            <div class="question__submit-button"></div>
           </div>
         </div>
       </main>
