--- a/src/index.html
+++ b/src/index.html
@@ -12,36 +12,36 @@
     <title>聊天机器人</title>
   </head>
   <body>
-    <header class="header">
-      <div class="header__menu">
-        <h1 class="menu__h1">聊天机器人</h1>
+    <header class="chat-header">
+      <div class="chat-header__menu">
+        <h1 class="chat-header__menu__h1">聊天机器人</h1>
 
-        <nav class="menu__nav">
-          <ul class="nav__list"></ul>
+        <nav class="chat-header__menu__nav">
+          <ul class="chat-header__menu__nav__list"></ul>
         </nav>
       </div>
 
-      <div class="header__new-chat"></div>
+      <div class="chat-header__new-chat"></div>
     </header>
 
-    <main class="main">
-      <aside class="main__aside">
-        <div class="aside__new-chat">新建对话</div>
+    <main class="chat-main">
+      <aside class="chat-main__aside">
+        <div class="chat-main__aside__new-chat">新建对话</div>
 
-        <ul class="aside__list"></ul>
+        <ul class="chat-main__aside__list"></ul>
       </aside>
 
-      <main class="main__main">
-        <article class="main__article"></article>
+      <main class="chat-main__main">
+        <article class="chat-main__main__article"></article>
 
-        <div class="main__form">
-          <div class="form__question">
+        <div class="chat-main__main__form">
+          <div class="chat-main__main__form__question">
             <textarea
               type="textarea"
               name="question"
               placeholder="请输入问题···"
               rows="3"
-              class="question__textarea"
+              class="chat-main__main__form__question__textarea"
             ></textarea>
           </div>
         </div>
