--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
       name="viewport"
       content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
     />
-    <link rel="stylesheet" href="./assets/styles/reset.scss" />
-    <link rel="stylesheet" href="./assets/styles/index.scss" />
-    <link rel="stylesheet" href="./assets/styles/media.scss" />
+    <link rel="stylesheet" href="./assets/styles/reset.css" />
+    <link rel="stylesheet" href="./assets/styles/index.css" />
+    <link rel="stylesheet" href="./assets/styles/media.css" />
     <title>聊天机器人</title>
   </head>
   <body>
