feat(index): 新增登录注册及退出按钮样式

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,16 @@
         <h1 class="chat-header__menu__h1">聊天机器人</h1>
 
         <nav class="chat-header__menu__nav">
-          <ul class="chat-header__menu__nav__list"></ul>
+          <div class="chat-header__menu__nav__sign-in-or-up">
+            <div class="chat-header__menu__nav__sign-in-or-up__logo"></div>
+            <p class="chat-header__menu__nav__sign-in-or-up__text">登录/注册</p>
+          </div>
+
+          <ol class="chat-header__menu__nav__list"></ol>
+
+          <ul class="chat-header__menu__nav__bottom-list">
+            <li class="list-item sign-out">退出</li>
+          </ul>
         </nav>
       </div>
 
@@ -26,9 +35,18 @@
 
     <main class="chat-main">
       <aside class="chat-main__aside">
-        <div class="chat-main__aside__new-chat">新建对话</div>
+        <div class="chat-main__aside__sign-in-or-up">
+          <div class="chat-main__aside__sign-in-or-up__logo"></div>
+          <p class="chat-main__aside__sign-in-or-up__text">登录/注册</p>
+        </div>
 
-        <ul class="chat-main__aside__list"></ul>
+        <div class="chat-main__aside__new-chat">新建聊天</div>
+
+        <ol class="chat-main__aside__list"></ol>
+
+        <ul class="chat-main__aside__bottom-list">
+          <li class="list-item sign-out">退出</li>
+        </ul>
       </aside>
 
       <main class="chat-main__main">
