feat(index): 新增蒙层二维码样式

--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,22 @@
         </div>
       </main>
     </main>
+
+    <div class="chat-mask visible">
+      <div class="chat-mask__dialog">
+        <header class="dialog__header">
+          <p class="dialog__header__title"></p>
+          <div class="dialog__header__close"></div>
+        </header>
+        <main class="dialog__main">
+          <img
+            class="dialog__main__qr-code"
+            src="./assets/images/qr-code-sign-in.png"
+          />
+          <p class="dialog__main__tip">微信扫码登录</p>
+        </main>
+      </div>
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
