--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
       </main>
     </main>
 
-    <div class="chat-mask visible">
+    <div class="chat-mask">
       <div class="chat-mask__dialog">
         <header class="dialog__header">
           <p class="dialog__header__title"></p>
